--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,25 @@ jobs:
           distribution: temurin
           cache: gradle
       - run: ./gradlew spotlessCheck build --no-daemon
+      - name: Read .nvmrc
+        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
+        id: nvm
+        if: matrix.os == 'ubuntu-latest'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          cache: npm
+        if: matrix.os == 'ubuntu-latest'
+      - name: Run Semantic Release
+        run: |
+          echo "gradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }}" > ~/.gradle/gradle.properties
+          echo "gradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}" >> ~/.gradle/gradle.properties
+          npm ci
+          npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: matrix.os == 'ubuntu-latest'
       - uses: actions/upload-artifact@v2.2.4
         if: always()
         with:
