fix: missing PackagerShell class in the Maven Central (#62)
* build: try to introduce the shadow plugin

* temporal

* fix: bump org.jetbrains.dokka from 1.6.20 to 1.6.21

Bumps org.jetbrains.dokka from 1.6.20 to 1.6.21.

---
updated-dependencies:
- dependency-name: org.jetbrains.dokka
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* build: add packager-shell to test scope

* temporal

* temporal

* temporal

* temporal

* temporal

* ci: revert a debug step in workflow

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ jobs:
           java-version: '17'
           distribution: temurin
           cache: gradle
-      - run: ./gradlew spotlessCheck build --no-daemon
+      - run: |
+          ./gradlew spotlessCheck build --no-daemon
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
